--- a/data/image_editor.css
+++ b/data/image_editor.css
@@ -10,19 +10,23 @@
 .nev{
     height: 40px;
     font-family:cursive;
+    font-size: 1.2rem;
     color: black;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0px 10px;
 }
+
 .unduredu{
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 90%;
-    border: 2px solid black;
+    justify-content: space-around;
+    width: 80%;
+    margin-left:100px ;
 }
+
 .unduredu button{
     width: max-content;
     padding: 5px 7px;
@@ -30,12 +34,43 @@
     cursor: pointer;
 }
 
+.dawonlod{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+    margin-left: 20px;
+}
+
+.btn-d{
+    width: 150px;
+    padding: 5px 20px;
+    border: 1px solid blue;
+    font-size: 1.1rem;
+    font-family: cursive;
+    cursor: pointer;
+}
+#r-set{
+    margin: 0px 20px 0px 10px;
+    background-color: transparent;
+    color: blue;
+    transition: background-color 0.5s;
+}
+#r-set:hover{
+    background-color: blue;
+    color: #fff;
+}
+#d-lod{
+    background-color: blue;
+    color: #fff;
+    transition: background-color 0.5s;
+}
 #display-box{
     width: 40px;
     border: 1px solid black;
     height: 100%;
+    text-align: center;
 }
-
 
 
 /* box-1 */
@@ -49,12 +84,7 @@
     overflow-y: scroll;
     padding-top: 20px;
 }
-/* .box-1 form{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid red;
-}   */
+
 .e-btn{
     width: 150px;
     height: 150px;
@@ -67,6 +97,7 @@
     overflow: hidden;
     cursor: pointer;
 }
+
 .e-btn:hover{
     /* background-color: #c2c2c2; */
     border: 2px solid blue;
@@ -105,6 +136,7 @@
     align-items: center;
     justify-content: center;
     padding: 0px 10px;
+    overflow-y: hidden;
 }
 .image img{
     width: 100%;
@@ -113,20 +145,26 @@
 
 /* box-3 */
 .box-3{
-    /* border: 2px solid red;   */
+    /* border: 2px solid red;*/
     text-align: center;
     width: 25%;
     height: 100%;
     background-color: #fff;
 }
 .box-3 table{
-    height: 90%;
-    /* background-color: #D4F1F4; */
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    flex-direction: column;
 }
 /* .box-3 table tr td{
 } */
-.box-3 table tr{
+.box-3 table tr td{
     border-collapse: collapse;
+    /* border: 1px solid red; */
+    height: 12vh;
+    width: 100%;
 }
 #td-1 input{
     height: 30px;
@@ -135,7 +173,6 @@ table input{
     text-align: center;
 }
 /* #td-2{
-    background-color: #75E6DA;
 }
 #td-3{
     background-color: #189AB4;
@@ -153,6 +190,7 @@ table input{
     background-color: blue;
     color: #fff;
 }
+
 /* rotate */
 #rotate{
     border-radius: 5px;
@@ -178,16 +216,23 @@ table input{
     /* box-shadow: 5px 5px 5px #eee; */
     text-shadow: none;
     cursor: pointer;
-    
 }
 /* crop */
 .coordinate{
-    width: 50px;
-    height: 20px;
     padding: 3px;
+    width: 40px;
 }
 /* blur */
 #blur{
     color: blue;
-    width: 60%;
+    width: 80%;
+}
+
+#text-area{
+    border: 1px solid black;
+    background-color: #6cb3ed;
+    width: 100%;
+    overflow-y:scroll;
+    font-size: 1.2rem;
+    height: 80%;
 }
